# butterup

./: .gitignore  README.md  pyproject.toml
docs/: Makefile  formal_grammar.ebnf  language_refence.btr  quickstart_tutorial.btr
src/butterup/: __init__.py
src/butterxml/: __main__.py
tests/: test_file_io.py  test_parser.py
